Updated presentation style

--- a/_posts/2017-06-01-renthop.md
+++ b/_posts/2017-06-01-renthop.md
@@ -1,10 +1,12 @@
+---
 layout: presentation
 title: RentHop Competition
 permalink: /renthop-presentation/
+---
 class: center, middle, inverse
 # Two Sigma RentHop Competition
 
-Matthew Emery (@lstmemery)
+Matthew Emery [(@lstmemery)](https://github.com/lstmemery)
 
 June 1st, 2017
 ---
